Triangle calculator: corrected a typo in the Heron formula

--- a/en/triangle-calculator/index.html
+++ b/en/triangle-calculator/index.html
@@ -41,7 +41,7 @@
 </p>
 				<hr/>
 				<p>
-  There are many ways to find the area of a triangle. Using Heron's Formula, one can find the area using A = sqrt(s*(s-a)*(s-b)*(s-b)), where <i>s</i> represents the semiperimeter of the triangle, or half the perimeter. If two
+  There are many ways to find the area of a triangle. Using Heron's Formula, one can find the area using A = sqrt(s*(s-a)*(s-b)*(s-c)), where <i>s</i> represents the semiperimeter of the triangle, or half the perimeter. If two
   sides (<i>a</i>, <i>b</i>) and the angle between them (<i>C</i>) are given, the area can be found using the formula 1/2 * <i>a</i> * <i>b</i> * sin(<i>C</i>). There are many ways to calculate information about a triangle, but
   sometimes it requires quite a bit of busywork. Why don't we write our own program to do all the work for us?
  </p>
