The Hardest Logic Puzzle Ever: corrected a typo in the problem description and the demo image

--- a/en/the_hardest_logic_puzzle_ever/index.html
+++ b/en/the_hardest_logic_puzzle_ever/index.html
@@ -87,7 +87,7 @@ def main():
 def welcome_message():
     print(&#039;Welcome! You are about to solve &quot;The Hardest Logic Puzzle Ever&quot;!&#039;)
     print(&#039;  There are 3 gods A, B, and C. Their names are, in no particular&#039;)
-    print(&#039;  order, Truth, False, and Random. You can ask 3 yes/no questions&#039;)
+    print(&#039;  order, True, False, and Random. You can ask 3 yes/no questions&#039;)
     print(&#039;  and in the end, you need to tell the names of A, B, and C. One&#039;)
     print(&#039;  challenging part is that these gods speak another language, so&#039;)
     print(&#039;  they can only answer &quot;da&quot; or &quot;ya&quot;. Unfortunately, you have no&#039;)
