--- a/en/prime-factorization/index.html
+++ b/en/prime-factorization/index.html
@@ -1,5 +1,5 @@
 
-<title>Trigonometry</title>
+<title>Prime Factorization</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -34,8 +34,8 @@
 	<div class="container container-course">
 		<div class="row">
 			<div class="col">
-				<h1>Trigonometry</h1>
-				<p class="subtleHeading">Problem written by Moussa Doumbouya</p>
+				<h1>Prime Factorization</h1>
+				<p class="subtleHeading">Problem written by Moussa Doumbouya, discovered by Euclid</p>
 				<hr/>
 				
 
@@ -57,24 +57,26 @@
 
 
 <p>
-	Write a program that continually reads in an integer and outputs its prime factors. You may want to decompose 
-	the problem by creating the following functions:
+	Write a program that continually reads in an integer and outputs its prime factors. Here is a possible 
+	top-down decomposition of the problem.
 	<ul>
-		<li>A function that checks if its argument is prime. 
-			Note that a prime numer is a number that is not multiple of any number other than 1 and itself.</li>
 		<li>
-			A function that returns the smallest prime factor of its argument.
-			That is, the smallest prime number greater than 1 that evenly divides the argument. 
+		A function that shows the prime factors of a number by repeatedly finding its smallest prime factor 
+		and repeating the same process on the remaining quotient until the remaining quotient is 1.
 		</li>
 		<li>
-			A function that shows the prime factors of a number by repeatedly finding its smallest prime factor 
-			and repeating the same process on the remaining quotient until the remaining quotient is 1.
+		A function that returns the smallest prime factor of its argument.
+		That is, the smallest number in the interval [2, n] that is a prime number and that evenly divides the argument. 
 		</li>
-
+		<li>
+		A function that checks if its argument is prime. 
+		Note that a prime numer is a number that is not evenly divisible by any number other than 1 and itself.
+		</li>
 	</ul>
 </p>
 
 <p>
+Examples of sample inputs and outputs of your program:
 <pre>
 
 Enter an integer: <span class="blue">34</span>
@@ -98,7 +100,7 @@ The prime factors of 147 are:
 </p>
 
 				<h2>Solution</h2>
-				<pre class="console" id="editor" style="height:1380.0px">&quot;&quot;&quot;
+				<pre class="console" id="editor" style="height:1580.0px">&quot;&quot;&quot;
 This program performs prime factorization onto user-specified positive integers.
 &quot;&quot;&quot;
 
@@ -110,8 +112,18 @@ def main():
 
 
 def read_positive_int(prompt_msg):
+	&quot;&quot;&quot;
+	Reads a positive integer entered by the user.
+
+	Args:
+		prompt_msg (str): The prompt message to show the user when requesting the input.
+
+	Returns:
+		int: The positive integer entered by the user.
+	&quot;&quot;&quot;
 	n = int(input(prompt_msg))
 	while n&lt;=0:
+		print(&quot;Please enter a positive integer&quot;)
 		n = int(input(prompt_msg))
 	
 	return n
@@ -119,10 +131,10 @@ def read_positive_int(prompt_msg):
 
 def show_prime_factors(n):
 	&quot;&quot;&quot;
-		Show the prime factors of n
+	Show the prime factors of n
 
-		Args:
-			n (int): The number to be factorized
+	Args:
+		n (int): The number to be factorized
 	&quot;&quot;&quot;
 
 	print(&quot;The prime factors of &quot; + str(n) + &quot; are: &quot;)
@@ -159,7 +171,7 @@ def is_prime(n):
 		bool: True if n has no divisor in range [2, n[. False otherwise.
 	&quot;&quot;&quot;
 	for d in range(2, n):
-		if n%d==0:
+		if n%d == 0:
 			return False
 	return True
 
