--- a/examples/prime-factorization/index.html
+++ b/examples/prime-factorization/index.html
@@ -18,24 +18,26 @@
 
 
 <p>
-	Write a program that continually reads in an integer and outputs its prime factors. You may want to decompose 
-	the problem by creating the following functions:
+	Write a program that continually reads in an integer and outputs its prime factors. Here is a possible 
+	top-down decomposition of the problem.
 	<ul>
-		<li>A function that checks if its argument is prime. 
-			Note that a prime numer is a number that is not multiple of any number other than 1 and itself.</li>
 		<li>
-			A function that returns the smallest prime factor of its argument.
-			That is, the smallest prime number greater than 1 that evenly divides the argument. 
+		A function that shows the prime factors of a number by repeatedly finding its smallest prime factor 
+		and repeating the same process on the remaining quotient until the remaining quotient is 1.
 		</li>
 		<li>
-			A function that shows the prime factors of a number by repeatedly finding its smallest prime factor 
-			and repeating the same process on the remaining quotient until the remaining quotient is 1.
+		A function that returns the smallest prime factor of its argument.
+		That is, the smallest number in the interval [2, n] that is a prime number and that evenly divides the argument. 
 		</li>
-
+		<li>
+		A function that checks if its argument is prime. 
+		Note that a prime numer is a number that is not evenly divisible by any number other than 1 and itself.
+		</li>
 	</ul>
 </p>
 
 <p>
+Examples of sample inputs and outputs of your program:
 <pre>
 
 Enter an integer: <span class="blue">34</span>
