credits to an ancien greek thinker

--- a/en/pytagoras/index.html
+++ b/en/pytagoras/index.html
@@ -35,7 +35,7 @@
 		<div class="row">
 			<div class="col">
 				<h1>Pythagorean theorem</h1>
-				<p class="subtleHeading">Problem written by Moussa Doumbouya</p>
+				<p class="subtleHeading">Problem written by Moussa Doumbouya, named after a great ancien greek thinker.</p>
 				<hr/>
 				<p>
 	The Pythagorean theorem, named after the ancient Greek thinker, Pythagoras, is a fundamental relation in geometry.
