--- a/en/8-ball/index.html
+++ b/en/8-ball/index.html
@@ -1,5 +1,5 @@
 
-<title>The title of this solved example is 8-Ball (Python solution)
+<title>8-Ball
 </title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,7 +35,7 @@
 	<div class="container container-course">
 		<div class="row">
 			<div class="col">
-				<h1>The title of this solved example is 8-Ball (Python solution)
+				<h1>8-Ball
 </h1>
 				<p class="subtleHeading">The example was solved by Mbaoma Chioma Mary (Section Leader for Section 223)</p>
 				<hr/>
