--- a/en/bmi/index.html
+++ b/en/bmi/index.html
@@ -1,5 +1,5 @@
 
-<title>E=MC2</title>
+<title>BMI</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -34,24 +34,27 @@
 	<div class="container container-course">
 		<div class="row">
 			<div class="col">
-				<h1>E=MC2</h1>
-				<p class="subtleHeading">Problem written by Chris, discovered by Einstein</p>
+				<h1>BMI</h1>
+				<p class="subtleHeading">Problem written by Neha, discovered by Adolphe Quetelet</p>
 				<hr/>
 				<p>
-	One of the exciting human discoveries is that mass and energy are interchangable and are related by the equation E = <i>m</i> × C <sup>2</sup>. This relationship was uncovered by Albert Einstein almost 100 years ago and we now know that the sun produces its heat by transforming small amounts of mass into large amounts of energy.
+	The BMI is a convenient rule of thumb used to broadly categorize a person as underweight, normal weight, overweight, or obese
+	based on tissue mass (muscle, fat, and bone) and height.
+	<br/>
+	Commonly accepted BMI ranges are underweight (under 18.5 kg/m2), normal weight (18.5 to 25), overweight (25 to 30), and obese (over 30).
 </p>
 
-<p> Write a program that continually reads in mass from the user and then outputs the equivalent amount of energy. Show your work in the following way:</p>
+<p> Write a program that continually reads in mass and height from the user and
+	then outputs if the user is underweight, normal weight, overweight or obese. Show your work in the following way:</p>
 <p></p>
 <center>
-	<img style="width:400px" src="./demo.png">	
+	<img style="width:400px" src="./demo.png">
 </center>
 <p></p>
-<p>If you ask the user to input kilograms, and you use speed of light equals 299792458 (which is in meters per second) the result of calculating E = <i>m</i> × C <sup>2</sup> will be in Jouls.</p>
-
-<p> Note that 3.0e+8 is scientific notation for 3.0 × 10 <sup>8</sup>... which is 300,000,000. You don't need to do anything for python to print floats in scientific notation. It will automatically do so when numbers get big enough.</p>
 <p>
-	Since the speed of light will never change, it makes sense to declare it as a constant.
+	If you ask the user to input weight in kilograms (m) and height in meter (h),
+	the result of calculating BMI = <i>m</i> / <i>(h * h)</i> will be in kg/m<sup>2</sup>.
+	The program will then output if the user is underweight etc based on the BMI.
 </p>
 				
 
@@ -64,27 +67,38 @@
 					</a>
 				</p>
 				<div class="collapse" id="soln-collapse">
-					<pre class="console" id="editor" style="height:420.0px">C = 299792458
-	
+					<pre class="console" id="editor" style="height:620.0px">
+
 def main():
-	while True:
-		# Read the mass in from the user. type is float
-		mass_in_kg = float(input(&quot;Enter kilos of mass: &quot;))
-		
-		# Calculate energy
-		# equivalently energy = mass * (C ** 2)
-		# using the ** operator
-		energy_in_joules = mass_in_kg * C * C
-		
-		# Display work to the user
-		print(&quot;e = m * C^2...&quot;)
-		print(&quot;m = &quot; + str(mass_in_kg) + &quot; kg&quot;)
-		print(&quot;C = &quot; + str(C) + &quot; m/s&quot;)
-		print(str(energyInJoules) + &quot; joules of energy!&quot;)
-		print(&quot;&quot;)
+    while True:
+        # Read the mass in from the user. type is float
+        mass_in_kg = float(input(&quot;Enter kilos of mass: &quot;))
+        height_in_meter = float(input(&quot;Enter height in meter: &quot;))
+
+        # Calculate BMI
+        # equivalently bmi = m/h^2
+        bmi = mass_in_kg / (height_in_meter * height_in_meter)
+
+        if bmi &lt; 18.5:
+            bmi_category = &quot;Underweight&quot;
+        elif bmi &lt; 25:
+            bmi_category = &quot;Normal Weight&quot;
+        elif bmi &lt; 30:
+            bmi_category = &quot;Overweight&quot;
+        else:
+            bmi_category = &quot;Obese&quot;
+
+        # Display work to the user
+        print(&quot;BMI = m / h ^ 2...&quot;)
+        print(&quot;m = &quot; + str(mass_in_kg) + &quot; kg&quot;)
+        print(&quot;h = &quot; + str(height_in_meter) + &quot; m&quot;)
+        print(&quot;BMI is: &quot; + str(bmi) + &quot; kg/m^2&quot;)
+        print(&quot;BMI category is: &quot;, bmi_category)
+
 
 if __name__ == &#039;__main__&#039;:
-	main()</pre>
+    main()
+</pre>
 				</div>
     
 				<script src="../../plugins/ace/ace.js" type="text/javascript" charset="utf-8"></script>
