--- a/en/how-much-TP/index.html
+++ b/en/how-much-TP/index.html
@@ -86,11 +86,12 @@ For your own challenge, there is a more accurate and complicated way to compute 
 					</a>
 				</p>
 				<div class="collapse" id="soln-collapse">
-					<pre class="console" id="editor" style="height:480.0px">SHEETS = 160
+					<pre class="console" id="editor" style="height:500.0px">SHEETS = 160
 USAGE = 6
 
 
 def main():
+	# This is a while loop (like in python) which never ends!
 	while True:
 		# Read the amount of Toilet Paper rolls from the user. type is float
 		number_of_rolls = float(input(&quot;Enter the amount of rolls you have: &quot;))
