--- a/en/index.html
+++ b/en/index.html
@@ -43,19 +43,25 @@
 </a></li>
 <li><a href="number-guessing-game/index.html">Number Guessing Game
 </a></li>
+<li><a href="pig_latin/index.html">Pig Latin Translator</a></li>
 <li><a href="13coins/index.html">13 Coins
 </a></li>
-<li><a href="emc2/index.html">E=MC2</a></li>
+<li><a href="trigonometry/index.html">Trigonometry</a></li>
+<li><a href="greenscreen/index.html">Greenscreen</a></li>
+<li><a href="bmi/index.html">BMI</a></li>
 <li><a href="birthday-probability/index.html">Birthday Probability
 </a></li>
+<li><a href="prime-factorization/index.html">Prime Factorization</a></li>
 <li><a href="temperature_convertor/index.html">Temperature Convertor
 </a></li>
 <li><a href="am_i_18/index.html">Am I 18+?</a></li>
 <li><a href="triangle-calculator/index.html">Triangle Calculator
 </a></li>
-<li><a href="moonweight/index.html">The title of this solved example is Moonweight (Python solution)
-</a></li>
+<li><a href="moonweight/index.html">Moonweight</a></li>
+<li><a href="golden-ratio/index.html">Golden Ratio</a></li>
+<li><a href="happy-number/index.html">Happy number</a></li>
 <li><a href="personality-quiz/index.html">Personality Quiz</a></li>
+<li><a href="animal_years/index.html">Animal Years</a></li>
 <li><a href="fibonacci-series/index.html">Fibonacci Series Calculation</a></li>
 <li><a href="pi_estimator/index.html">Pi Estimator</a></li>
 <li><a href="lucky_draw/index.html">Lucky Draw
@@ -64,16 +70,23 @@
 <li><a href="emc2-console/index.html">E=MC2</a></li>
 <li><a href="slot-machine/index.html">Slot machine
 </a></li>
+<li><a href="pencil_sketch/index.html">Pencil Sketch
+</a></li>
+<li><a href="photo_stitching/index.html">Photo Stitching
+</a></li>
 <li><a href="the_hardest_logic_puzzle_ever/index.html">The Hardest Logic Puzzle Ever
 </a></li>
 <li><a href="bouncing_billiards/index.html">Bouncing Billiards
 </a></li>
-<li><a href="8-ball/index.html">The title of this solved example is 8-Ball (Python solution)
+<li><a href="8-ball/index.html">8-Ball
 </a></li>
 <li><a href="small-primes/index.html">Small Primes
 </a></li>
+<li><a href="pytagoras/index.html">Pythagorean theorem</a></li>
+<li><a href="pi-approximation-infinite-sequence/index.html">Approximating Pi</a></li>
 <li><a href="how-much-TP/index.html">How much toilet paper?
 </a></li>
+<li><a href="mirror/index.html">Mirror Left-Right</a></li>
 
 			</ol>
 		</div>
