--- a/en/golden-ratio/index.html
+++ b/en/golden-ratio/index.html
@@ -133,7 +133,15 @@
 				
 
 				<h2>Solution</h2>
-				<pre class="console" id="editor" style="height:660.0px">
+				<p>
+					<a class="btn btn-primary" id="soln-btn" onclick="toggleButtonText()"
+						data-toggle="collapse" href="#soln-collapse" aria-expanded="false" 
+						aria-controls="Collapse">
+						Show Solution
+					</a>
+				</p>
+				<div class="collapse" id="soln-collapse">
+					<pre class="console" id="editor" style="height:660.0px">
 def main():
 	&quot;&quot;&quot;
 	Show the ratio of consecutive Fibonaccy numbers
@@ -166,18 +174,29 @@ def fib(n):
 
 if __name__ == &#039;__main__&#039;:
 	main()</pre>
+				</div>
     
-<script src="../../plugins/ace/ace.js" type="text/javascript" charset="utf-8"></script>
-<script>
-    var editor = ace.edit("editor");
-   editor.setTheme('ace/theme/eclipse');
-   editor.getSession().setMode("ace/mode/python");
-   editor.setReadOnly(true);
-   editor.renderer.setShowGutter(false); 
-   editor.setFontSize("14px");
-    /*editor.setTheme("ace/theme/eclipse");
-    editor.getSession().setMode("ace/mode/java");*/
-</script>
+				<script src="../../plugins/ace/ace.js" type="text/javascript" charset="utf-8"></script>
+				<script>
+				    var editor = ace.edit("editor");
+				   editor.setTheme('ace/theme/eclipse');
+				   editor.getSession().setMode("ace/mode/python");
+				   editor.setReadOnly(true);
+				   editor.renderer.setShowGutter(false); 
+				   editor.setFontSize("14px");
+				    /*editor.setTheme("ace/theme/eclipse");
+				    editor.getSession().setMode("ace/mode/java");*/
+				</script>
+				<script>
+					function toggleButtonText() {
+						var elem = document.getElementById("soln-btn");
+						if (elem.innerHTML.trim() === "Show Solution") {
+							elem.innerHTML = "Hide Solution";
+						} else {
+							elem.innerHTML = "Show Solution";
+						}
+					}
+				</script>
 				<hr/>
 			</div>
 		</div>
