--- a/en/greenscreen/index.html
+++ b/en/greenscreen/index.html
@@ -1,5 +1,5 @@
 
-<title>Trigonometry</title>
+<title>Greenscreen</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -34,57 +34,28 @@
 	<div class="container container-course">
 		<div class="row">
 			<div class="col">
-				<h1>Trigonometry</h1>
-				<p class="subtleHeading">Problem written by Moussa Doumbouya</p>
+				<h1>Greenscreen</h1>
+				<p class="subtleHeading">Problem written by many folks. Solution from a lecture by Mehran Sahami.
+</p>
 				<hr/>
 				<p>
-	There are relationships between the lengths of the sides and the measures of the angles of a triangle. Trigonometry
-	is the branch of mathematics that studies such relationships. <br />
-
-	The following trigonometric ratios are defined for the acute angles (an angle smaller than 90 degrees) of a right triangle:
-	<ul>
-		<li>The cosine of the angle is equal to the length of the side adjacent to that angle divided by the length of the hypotenuse.</li>
-		<li>The sine of the angle is equal to the length of the side opposite to that angle divided by the length hypotenuse.</li>
-	</ul>
-	Note: the length of the hypotenuse can be calculated using the Pytagorean theorem (in a right triangle, the square
-	of the hypotenuse is equal to the sum of the square of the other two sides.)
+    This example shows an implementation of <a href="https://en.wikipedia.org/wiki/Chroma_key">"bluescreening"</a> which is a version of greenscreening.
 </p>
-
-<img src="trigonometry.png" style="width: 400px;">
-
+<p>Take two images, a background and a foreground:</p>
 <p>
-	Write a program that continually reads in the lengths of the sides AB and AC, and that outputs the followings:
-	<ul>
-		<li>The sine of the angle ABC</li>
-		<li>The cosine of the angle ABC</li>
-		<li>The sum of the squares of the above two results</li>
-	</ul>
-	What do you notice? Can you explain? <br />
-	Below are examples of the program's inputs and outputs:
+<center>
+    <img style="width:400px" src="./quad.png">
+    &nbsp;
+    <img style="width:400px" src="./tiefighter.jpg">
+</center>
 </p>
-
+<p>Add the foreground to the background image, but only copy over the pixels that are not too blue.</p>
+<p>The resulting image looks like this:</p>
 <p>
-<pre>
-Enter the length of AB: <span class="blue">3</span>
-Enter the length of AC: <span class="blue">4</span>
-cos(ABC) = 0.6
-sin(ABC) = 0.8
-cos(ABC)^2 + sin(ABC)^2= 1.0
-
-Enter the length of AB: <span class="blue">1</span>
-Enter the length of AC: <span class="blue">1</span>
-cos(ABC) = 0.7071067811865475
-sin(ABC) = 0.7071067811865475
-cos(ABC)^2 + sin(ABC)^2= 0.9999999999999998
-
-Enter the length of AB: <span class="blue">4</span>
-Enter the length of AC: <span class="blue">3</span>
-cos(ABC) = 0.8
-sin(ABC) = 0.6
-cos(ABC)^2 + sin(ABC)^2= 1.0
-</pre>
+<center>
+    <img style="width:400px" src="./merged.png">
+</center>
 </p>
-
 				<h2>Solution</h2>
 				<p>
 					<a class="btn btn-primary" id="soln-btn" onclick="toggleButtonText()"
@@ -94,37 +65,58 @@ cos(ABC)^2 + sin(ABC)^2= 1.0
 					</a>
 				</p>
 				<div class="collapse" id="soln-collapse">
-					<pre class="console" id="editor" style="height:620.0px">import math
+					<pre class="console" id="editor" style="height:1040.0px">&quot;&quot;&quot;
+This program shows an example of &quot;greenscreening&quot;, well
+actually &quot;bluescreening&quot; in this case, where we replace the
+pixels of a certain color intensity in a particular channel
+(here, we use red) with the pixels from another image.
+&quot;&quot;&quot;
 
-&quot;&quot;&quot;
-This program reads the lengths of the sides AB and AC of a right triangle ABC with
- its right angle located at A, and outputs the the followings:
- - cos(ABC)
- - sin(ABC)
- - cos(ABC)^2 + sin(ABC)^2
- 
- The last quantity, known as the Pythagorean identity is always equal to 1. Due to
- numerical precision errors, the program may display values slightly greater than 
- or less than 1.
-&quot;&quot;&quot;
+from simpleimage import SimpleImage
+
+INTENSITY_THRESHOLD = 1.6
+
+def bluescreen(main_filename, back_filename):
+    &quot;&quot;&quot;
+    Implements the notion of &quot;bluescreening&quot;. That is,
+    the image in the main_filename has its &quot;sufficiently&quot;
+    blue pixels replaced with pixel from the corresponding x, y
+    location in the image in the file back_filename.
+    Returns the resulting &quot;bluescreened&quot; image.
+    &quot;&quot;&quot;
+    image = SimpleImage(main_filename)
+    back = SimpleImage(back_filename)
+    for pixel in image:
+        average = (pixel.red + pixel.green + pixel.blue) // 3
+        # See if this pixel is &quot;sufficiently&quot; red
+        if pixel.blue &gt;= average * INTENSITY_THRESHOLD:
+            # If so, we get the corresponding pixel from the
+            # back image and overwrite the pixel in the
+            # main image with that from the back image.
+            x = pixel.x
+            y = pixel.y
+            image.set_pixel(x, y, back.get_pixel(x, y))
+    return image
+
 
 def main():
-	while True:
-		# Read the mass in from the user. type is float
-		ab = float(input(&quot;Enter the length of AB: &quot;))
-		ac = float(input(&quot;Enter the length of AC: &quot;))
-		bc = math.sqrt(ab**2 + ac**2)
-		cos_abc = ab/bc
-		sin_abc = ac/bc
-		sum_squared = cos_abc**2 + sin_abc**2
-		print(&quot;cos(ABC) = &quot; + str(cos_abc))
-		print(&quot;sin(ABC) = &quot; + str(sin_abc))
-		print(&quot;cos(ABC)^2 + sin(ABC)^2= &quot; + str(sum_squared))
-		print(&quot;&quot;)
+    &quot;&quot;&quot;
+    Run your desired image manipulation functions here.
+    You should store the return value (image) and then
+    call .show() to visualize the output of your program.
+    &quot;&quot;&quot;
+    original_stop = SimpleImage(&#039;images/stop.png&#039;)
+    original_stop.show()
+
+    original_leaves = SimpleImage(&#039;images/leaves.png&#039;)
+    original_leaves.show()
+
+    stop_leaves_replaced = bluescreen(&#039;images/stop.png&#039;, &#039;images/leaves.png&#039;)
+    stop_leaves_replaced.show()
 
 
 if __name__ == &#039;__main__&#039;:
-	main()</pre>
+    main()</pre>
 				</div>
     
 				<script src="../../plugins/ace/ace.js" type="text/javascript" charset="utf-8"></script>
