--- a/en/index.html
+++ b/en/index.html
@@ -41,6 +41,7 @@
 			<ol>
 				<li><a href="quadratic_formula/index.html">Quadratic Equation Solver
 </a></li>
+<li><a href="bouncing-ball/index.html">Bouncing Ball</a></li>
 <li><a href="number-guessing-game/index.html">Number Guessing Game
 </a></li>
 <li><a href="pig_latin/index.html">Pig Latin Translator</a></li>
@@ -55,10 +56,12 @@
 <li><a href="temperature_convertor/index.html">Temperature Convertor
 </a></li>
 <li><a href="am_i_18/index.html">Am I 18+?</a></li>
+<li><a href="move-to-center/index.html">Move to Center</a></li>
 <li><a href="triangle-calculator/index.html">Triangle Calculator
 </a></li>
 <li><a href="moonweight/index.html">Moonweight</a></li>
 <li><a href="golden-ratio/index.html">Golden Ratio</a></li>
+<li><a href="programming-is-awesome/index.html">Programming is Awesome</a></li>
 <li><a href="happy-number/index.html">Happy number</a></li>
 <li><a href="personality-quiz/index.html">Personality Quiz</a></li>
 <li><a href="animal_years/index.html">Animal Years</a></li>
