--- a/en/index.html
+++ b/en/index.html
@@ -44,12 +44,14 @@
 <li><a href="bouncing-ball/index.html">Bouncing Ball</a></li>
 <li><a href="number-guessing-game/index.html">Number Guessing Game
 </a></li>
+<li><a href="paradise/index.html">Programmer's Paradise</a></li>
 <li><a href="pig_latin/index.html">Pig Latin Translator</a></li>
 <li><a href="13coins/index.html">13 Coins
 </a></li>
 <li><a href="trigonometry/index.html">Trigonometry</a></li>
 <li><a href="greenscreen/index.html">Greenscreen</a></li>
 <li><a href="bmi/index.html">BMI</a></li>
+<li><a href="magic_eye/index.html">Magic Eye</a></li>
 <li><a href="birthday-probability/index.html">Birthday Probability
 </a></li>
 <li><a href="prime-factorization/index.html">Prime Factorization</a></li>
@@ -70,6 +72,7 @@
 <li><a href="lucky_draw/index.html">Lucky Draw
 </a></li>
 <li><a href="leap-year/index.html">Leap year</a></li>
+<li><a href="fisheye/index.html">Fisheye</a></li>
 <li><a href="emc2-console/index.html">E=MC2</a></li>
 <li><a href="slot-machine/index.html">Slot machine
 </a></li>
