Changed soln.py - added a while loop to the code

--- a/examples/am_i_18/index.html
+++ b/examples/am_i_18/index.html
@@ -5,7 +5,7 @@
     which is the age for voting in most countries. 
 </p>
 <p>
-    Write a program that continiously takes a person's age as input and determines if a person can vote or not, that is, if he is older than 18 years old or not.
+    Write a program that continuously takes a person's age as input and determines if a person can vote or not, that is, if he is older than 18 years old or not.
     If you want to finish the program, enter ctrl+c.
 </p>
 <pre class="console" style="width:800px">
